# swc-plugin-jsx-remove-attribute

./: Cargo.toml  README.md  package.json  swc_plugin_jsx_remove_attribute.wasm
src/: lib.rs
