[package]
authors = ["Ryan O'Connor <charle692@gmail.com>"]
description = "SWC Plugin for removing JSX attributes"
edition = "2021"
license = "MIT"
name = "swc-plugin-jsx-remove-attribute"
version = "1.0.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
serde_json = "1.0.87"
swc_core = { version = "0.58.5", features = [
  "ecma_ast",
  "ecma_plugin_transform",
  "ecma_visit",
  "common",
] }
swc_ecma_parser = { version = "0.124.2", features = [
  "typescript",
] }
